--- a/JS-Projects/javascript/index.html
+++ b/JS-Projects/javascript/index.html
@@ -9,7 +9,7 @@
         <button onclick="seven()">7</button>
         <button onclick="eleven()">11</button>
         <button onclick="time10()">For x10 results</button>
-        <button onclick="clear()">To reset everything</button>
+        <button onclick="reset()">To reset everything</button>
         <p id="7"></p>
         <p id="11"></p>
         <script src="script.js"></script>
