--- a/JS-Projects/javascript/index.html
+++ b/JS-Projects/javascript/index.html
@@ -6,12 +6,6 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
-        <button onclick="seven()">7</button>
-        <button onclick="eleven()">11</button>
-        <button onclick="time10()">For x10 results</button>
-        <button onclick="reset()">To reset everything</button>
-        <p id="7"></p>
-        <p id="11"></p>
-        <script src="script.js"></script>
+        <script src="script.js" type="module"></script>
     </body>
 </html>
