--- a/JS-Projects/Calculator/index.html
+++ b/JS-Projects/Calculator/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
-        <button></button>
+        <p>Project Paused</p>
         <script src="script.js" type="module"></script>
     </body>
 </html>
