--- a/JS-Projects/Calculator/index.html
+++ b/JS-Projects/Calculator/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
+        <button onclick="Prompt()">Prompt</button>
         <p id="eval"></p>
         <script src="script.js" type="module"></script>
     </body>
