--- a/JS-Projects/Calculator/index.html
+++ b/JS-Projects/Calculator/index.html
@@ -8,6 +8,6 @@
     <body>
         <button onclick="phrompt()">Prompt</button>
         <p id="eval"></p>
-        <script src="script.js" type="module"></script>
+        <script src="script.js"></script>
     </body>
 </html>
