--- a/JS-Projects/Calculator/index.html
+++ b/JS-Projects/Calculator/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
-        <button onclick="phrompt()">Prompt</button>
+        <input type="text" id="name">
         <p id="eval"></p>
         <script src="script.js"></script>
     </body>
