--- a/JS-Projects/Calculator/index.html
+++ b/JS-Projects/Calculator/index.html
@@ -7,7 +7,8 @@
     </head>
     <body>
         <input type="text" id="name">
-        <p id="eval"></p>
+        <button onclick="answer()"></button>
+        <p id="ans"></p>
         <script src="script.js"></script>
     </body>
 </html>
