--- a/JS-Projects/Calculator/index.html
+++ b/JS-Projects/Calculator/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <input type="text" id="name">
-        <button onclick="answer()"></button>
+        <button onclick="answer()">GO!!!!!!!!!!!!!!!!!!!!!!!!!!</button>
         <p id="ans"></p>
         <script src="script.js"></script>
     </body>
