--- a/JS-Projects/Calculator/index.html
+++ b/JS-Projects/Calculator/index.html
@@ -8,6 +8,7 @@
     <body>
         <input type="text" id="name">
         <button onclick="answer()">GO!!!!!!!!!!!!!!!!!!!!!!!!!!</button>
+        <button >1</button>
         <p id="ans"></p>
         <script src="script.js"></script>
     </body>
