--- a/JS-Projects/Calculator/index.html
+++ b/JS-Projects/Calculator/index.html
@@ -9,7 +9,7 @@
         <input type="text" id="name">
         <button onclick="answer()">GO!!!!!!!!!!!!!!!!!!!!!!!!!!</button>
         <button >1</button>
-        <p id="ans">Project PAused</p>
+        <p id="ans">Project Paused</p>
         <script src="script.js"></script>
     </body>
 </html>
