--- a/Go-Projects/astilectron/index.html
+++ b/Go-Projects/astilectron/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
-        <h1>YEEEEeeeteEet</h1>
+        <button>hi</button>
         <script src="script.js"></script>
     </body>
 </html>
