--- a/Go-Projects/astilectron/index.html
+++ b/Go-Projects/astilectron/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
+        <input type="text" id="message">
         <button>hi</button>
         <script src="script.js"></script>
     </body>
