--- a/Go-Projects/astilectron/index.html
+++ b/Go-Projects/astilectron/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <input type="text" id="message">
-        <button>hi</button>
+        <button onclick="sendmsg()">message send</button>
         <script src="script.js"></script>
     </body>
 </html>
