--- a/JS-Projects/FileMaker/index.html
+++ b/JS-Projects/FileMaker/index.html
@@ -7,5 +7,6 @@
     </head>
     <body>
         <script src="script.js"></script>
+        <button onclick="test()">test</button>
     </body>
 </html>
