--- a/JS-Projects/FileMaker/index.html
+++ b/JS-Projects/FileMaker/index.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <script src="script.js"></script>
-        <button onclick="test()">Make a go file</button>
+        <button onclick="makego()">Make a go file</button>
     </body>
 </html>
