--- a/JS-Projects/FileMaker/src/index.html
+++ b/JS-Projects/FileMaker/src/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <script src="script.js"></script>
+        <p>Type in your path</p>
         <input type="text" id="path">
         <button onclick="makego()">Make a go file</button>
     </body>
