--- a/JS-Projects/FileMaker/src/index.html
+++ b/JS-Projects/FileMaker/src/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="script.js"></script>
         <p>Type in your path</p>
         <input type="text" id="path">
