--- a/JS-Projects/Calculator/index.html
+++ b/JS-Projects/Calculator/index.html
@@ -7,9 +7,8 @@
     </head>
     <body>
         <input type="text" id="name">
-        <button onclick="answer()">GO!!!!!!!!!!!!!!!!!!!!!!!!!!</button>
-        <button >1</button>
-        <p id="ans">Project Paused</p>
+        <button onclick="ans()">GO!!!!!!!!!!!!!!!!!!!!!!!!!!</button>
+        <p id="ans"></p>
         <script src="script.js"></script>
     </body>
 </html>
