--- a/JS-Projects/FileMaker/src/index.html
+++ b/JS-Projects/FileMaker/src/index.html
@@ -6,6 +6,9 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
+        <input type="text" id="email">
+        <input type="text" id="username">
+        <input type="text" id="password">
          <script src="script.js"></script>
     </body>
 </html>
