--- a/JS-Projects/FileMaker/src/index.html
+++ b/JS-Projects/FileMaker/src/index.html
@@ -6,8 +6,11 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
+        <p>Email</p>
         <input type="text" id="email">
+        <p>Username</p>
         <input type="text" id="username">
+        <p>Password</p>
         <input type="text" id="password">
          <script src="script.js"></script>
     </body>
