--- a/JS-Projects/FileMaker/src/index.html
+++ b/JS-Projects/FileMaker/src/index.html
@@ -9,9 +9,9 @@
         <p>Email</p>
         <input type="text" id="email">
         <p>Username</p>
-        <input type="text" id="username">
+        <input type="text" id="usrnm">
         <p>Password</p>
-        <input type="text" id="password">
+        <input type="text" id="pswrd">
          <script src="script.js"></script>
     </body>
 </html>
