--- a/JS-Projects/FileMaker/src/index.html
+++ b/JS-Projects/FileMaker/src/index.html
@@ -12,6 +12,9 @@
         <input type="text" id="usrnm">
         <p>Password</p>
         <input type="text" id="pswrd">
-         <script src="script.js"></script>
+
+        <button onclick="register()">Register</button>
+
+        <script src="script.js"></script>
     </body>
 </html>
