--- a/JS-Projects/FileMaker/src/index.html
+++ b/JS-Projects/FileMaker/src/index.html
@@ -16,5 +16,11 @@
         <button onclick="register()">Register</button>
 
         <script src="script.js"></script>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+            body {
+                font-family: 'Nunito', sans-serif;
+            }
+        </style>
     </body>
 </html>
