--- a/JS-Projects/FileMaker/src/index.html
+++ b/JS-Projects/FileMaker/src/index.html
@@ -4,6 +4,7 @@
         <title>My Page</title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="style.css" />
+        <link rel="stylesheet" type="text/css" href="node_modules/bulma/css/bulma.css">
     </head>
     <body>
         <p>Email</p>
@@ -14,6 +15,8 @@
         <input type="text" id="pswrd">
 
         <button onclick="register()">Register</button>
+
+
 
         <script src="script.js"></script>
         
