--- a/JS-Projects/FileMaker/src/index.html
+++ b/JS-Projects/FileMaker/src/index.html
@@ -4,7 +4,7 @@
         <title>My Page</title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="style.css" />
-        <link rel="stylesheet" type="text/css" href="node_modules/bulma/css/bulma.css">
+        <link rel="stylesheet" type="text/css" href="css/mystyles.css">
     </head>
     <body>
         <div class="form">
