--- a/JS-Projects/FileMaker/src/index.html
+++ b/JS-Projects/FileMaker/src/index.html
@@ -30,7 +30,7 @@
                 </div>
             </div> 
 
-            <button onclick="register()">Register</button>
+            <button onclick="input_check()">Register</button>
         </div>
         <script src="script.js"></script>   
     </body>
