--- a/Websites/Website/home.html
+++ b/Websites/Website/home.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="navbar">
-            <button class="item">|logo|</button>
+            <button class="item white">|logo|</button>
         </div>
         <script src="home.js"></script>
     </body>
