--- a/Websites/Website/index.html
+++ b/Websites/Website/index.html
@@ -6,9 +6,9 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
-        <div class="navbar">
-            <button class="item white">|logo|</button>
+        <div class="bar">
+            <button class="lotext">Website</button>
         </div>
-        <script src="home.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
