--- a/Websites/Website/Register/index.html
+++ b/Websites/Website/Register/index.html
@@ -4,7 +4,7 @@
         <title>My Page</title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="style.css" />
-        <link rel="stylesheet" type="text/css" href="../css/mystyles.css">
+        <link rel="stylesheet" type="text/css" href="../cssdesign/mystyles.css">
     </head>
     <body>
         <div class="form">
