--- a/Websites/Website/Register/index.html
+++ b/Websites/Website/Register/index.html
@@ -4,10 +4,13 @@
         <title>My Page</title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="style.css" />
-        <link rel="stylesheet" type="text/css" href="../cssdesign/mystyles.css">
+        <link rel="stylesheet" type="text/css" href="../cssdesign/css/mystyles.css">
     </head>
     <body>
-        <div class="form">
+        <div class="content">
+
+        </div>
+        <div class="form formatting invisible" id="everything">
 
             <div class="field">
                 <div class="control">
