--- a/Websites/Website/home.html
+++ b/Websites/Website/home.html
@@ -4,6 +4,7 @@
         <title>My Page</title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="style.css" />
+        <link rel="stylesheet" type="text/css" href="/cssdesign/css/mystyles.css">
     </head>
     <body>
         <div class="bar">
