--- a/Websites/Website/Register/index.html
+++ b/Websites/Website/Register/index.html
@@ -7,6 +7,9 @@
         <link rel="stylesheet" type="text/css" href="../cssdesign/css/mystyles.css">
     </head>
     <body>
+        <div class="bar">
+            <img src="Logo.png" onclick="homeredirect()" height="100px" width="100px" class=".logo">
+        </div>
         <div class="content">
 
         </div>
