--- a/Websites/Website/home.html
+++ b/Websites/Website/home.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="bar">
-            <img src="Logo.png" onclick="homeredirect()" height="100px" width="100px" class=".logo">
+            <img src="/cssdesign/css/Logo.png" onclick="homeredirect()" height="100px" width="100px" class=".logo">
         </div>
         <script src="script.js"></script>
     </body>
