--- a/Websites/Website/Register/index.html
+++ b/Websites/Website/Register/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="register">
+<html class="content">
     <head>
         <title>My Page</title>
         <meta charset="utf-8">
