--- a/Websites/Website/Register/index.html
+++ b/Websites/Website/Register/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="content">
+<html>
     <head>
         <title>My Page</title>
         <meta charset="utf-8">
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="bar">
-            <img src="/cssdesign/css/Logo.png" onclick="homeredirect()" height="100px" width="100px" class=".logo">
+            <img src="Logo.png" onclick="homeredirect()" height="100px" width="100px" class=".logo">
         </div>
         <div class="content">
 
