--- a/Websites/Website/Register/index.html
+++ b/Websites/Website/Register/index.html
@@ -10,8 +10,7 @@
         <div class="bar">
             <img src="/cssdesign/css/Logo.png" onclick="homeredirect()" height="100px" width="100px" class=".logo">
         </div>
-        <div class="content">
-        </div>
+        <div class="content"></div>
         <div class="form formatting invisible" id="everything">
 
             <div class="field">
