--- a/Websites/Website/Register/index.html
+++ b/Websites/Website/Register/index.html
@@ -13,8 +13,8 @@
         </div>
 
         <div class="content"></div>
-        
-        <div class="form formatting invisible" id="everything">
+
+        <div class="form formatting" id="everything">
             <div class="field">
                 <div class="control">
                     <p class="white-text">Email</p>
