--- a/Websites/Website/Register/index.html
+++ b/Websites/Website/Register/index.html
@@ -17,7 +17,7 @@
         <div class="form formatting" id="everything">
             <div class="field">
                 <div class="control">
-                    <p class="white-text">Email</p>
+                    <p class="grey-text">Email</p>
                     <input class="input is-info is-rounded transparent" type="email" id="email" placeholder="example@gmail.com">
                     <p id="emlerr" class="red-text"></p>
                 </div>
@@ -25,7 +25,7 @@
 
             <div class="field">
                 <div class="control">
-                    <p class="white-text">Username</p>
+                    <p class="grey-text">Username</p>
                     <input class="input is-info is-rounded transparent" type="username" id="usrnm" placeholder="JohnDoe123">
                     <p id="usrerr" class="red-text"></p>
                 </div>
@@ -33,7 +33,7 @@
 
             <div class="field">
                 <div class="control">
-                    <p class="white-text">Password</p>
+                    <p class="grey-text">Password</p>
                     <input class="input is-info is-rounded transparent" type="password" id="pswrd" placeholder="password123">
                     <p id="psderr" class="red-text"></p>
                 </div>
