Some work on the navbar

--- a/Websites/Glade/Register/register.html
+++ b/Websites/Glade/Register/register.html
@@ -8,9 +8,7 @@
     </head>
     <body>
 
-        <div class="bar">
-            <img src="/cssdesign/css/Logo.png" onclick="window.location.assign('../home.html')" height="100px" width="100px" class=".logo">
-        </div>
+        <nav-bar></nav-bar>
 
         <div class="content"></div>
 
