--- a/JS-Projects/Calculator/index.html
+++ b/JS-Projects/Calculator/index.html
@@ -6,9 +6,8 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
     </head>
     <body>
-        <input type="text" id="name">
-        <button onclick="ans()">GO!!!!!!!!!!!!!!!!!!!!!!!!!!</button>
-        <p id="ans"></p>
+        <input type="text" id="name" class="ipt" placeholder="calculation, e.g. 1+2..">
+        <button onclick="ipt()" id="1" >1</button>
         <script src="script.js"></script>
     </body>
 </html>
