--- a/JS-Projects/Calculator/index.html
+++ b/JS-Projects/Calculator/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>My Page</title>
-        <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="style.css" />
-    </head>
-    <body>
-        <input type="text" id="name" class="ipt" placeholder="calculation, e.g. 1+2..">
-        <button onclick="ipt()" id="1" >1</button>
-        <script src="script.js"></script>
-    </body>
+
+<head>
+    <title>My Page</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+</head>
+
+<body>
+    <div class="container">
+        <input type="text" id="input" class="ipt font" placeholder="calculation, e.g. 1+2.." />
+        <button onclick="ipt()" id="1">1</button>
+    </div>
+    <script src="script.js"></script>
+</body>
+
 </html>
