More on data-handler and started login page

--- a/Websites/Glade/Login/login.html
+++ b/Websites/Glade/Login/login.html
@@ -9,8 +9,26 @@
 </head>
 
 <body>
-    <p>login</p>
+    <navbar></navbar>
+
+    <div class="content"></div>
+
+    <div class="form formatting invisible">
+
+        <div class="field">
+            <div class="control">
+                <p class="white-text">Username/Email</p>
+                <input type="username" class="input is-info is-rounded transparent" id="username/email"
+                    placeholder="johndoe123/example@gmail.com">
+            </div>
+        </div>
+
+
+    </div>
+
     <script src="login.js"></script>
+    <script src="../Global/navbar.style.js"></script>
+    <script src="../Global/api.request.handler.js"></script>
 </body>
 
 </html>
