--- a/Websites/Glade/Login/login.html
+++ b/Websites/Glade/Login/login.html
@@ -6,21 +6,21 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="login.css" />
     <link rel="stylesheet" type="text/css" href="../CSSdesign/css/mystyles.css" />
+
 </head>
 
 <body>
-    <navbar></navbar>
+    <nav-bar></nav-bar>
 
     <div class="content"></div>
 
-    <div class="form formatting invisible" id="everything">
-
+    <div class="form formatting" id="everything">
         <div class="field">
             <div class="control">
                 <p class="white-text">Username/Email</p>
-                <input type="username" class="input is-info is-rounded transparent" id="username/email"
+                <input type="email" class="input is-info is-rounded transparent" id="username/email"
                     placeholder="johndoe123/example@gmail.com">
-                <p id="lusrerr" class="red-text"></p>
+                <p id="usrerr" class="red-text"></p>
             </div>
         </div>
 
@@ -29,15 +29,13 @@
                 <p class="white-text">Password</p>
                 <input type="password" class="input is-info is-rounded transparent" id="password"
                     placeholder="password123">
-                <input type="checkbox" onclick="showPassword()">
-                <p id="lpsderr" class="red-text"></p>
+                <p id="psderr" class="red-text"></p>
             </div>
         </div>
-
         <button class="button is-rounded" onclick="login()" id="login">Login</button>
     </div>
 
-    <script src="login.js"></script>
+    <script src="./login.js"></script>
     <script src="../Global/navbar.style.js"></script>
     <script src="../Global/dataHandler.js"></script>
 </body>
