--- a/Websites/Glade/Register/register.html
+++ b/Websites/Glade/Register/register.html
@@ -14,7 +14,7 @@
 
     <div class="content"></div>
 
-    <div class="form formatting invisible" id="everything">
+    <div class="form formatting" id="everything">
         <div class="field">
             <div class="control">
                 <p class="white-text">Email</p>
@@ -37,13 +37,12 @@
                 <p class="white-text">Password</p>
                 <input class="input is-info is-rounded transparent" type="password" id="pswrd"
                     placeholder="password123">
-                <input type="checkbox" onclick="showPassword()">
                 <p id="psderr" class="red-text"></p>
             </div>
         </div>
 
         <div class="buttons">
-            <button class="button is-rounded" onclick="register()" id="login">Register</button>
+            <button class="button is-rounded" onclick="register()" id="register">Register</button>
         </div>
 
     </div>
