ERROR fixed! Need work on login part of api

--- a/Websites/Glade/Register/register.html
+++ b/Websites/Glade/Register/register.html
@@ -14,7 +14,7 @@
 
     <div class="content"></div>
 
-    <div class="form formatting" id="everything">
+    <div class="form formatting invisible" id="everything">
         <div class="field">
             <div class="control">
                 <p class="white-text">Email</p>
