--- a/Websites/Glade/Login/login.html
+++ b/Websites/Glade/Login/login.html
@@ -17,9 +17,8 @@
     <div class="form formatting invisible" id="everything">
         <div class="field">
             <div class="control">
-                <p class="white-text">Username/Email</p>
-                <input type="email" class="input is-info is-rounded transparent" id="username/email"
-                    placeholder="johndoe123/example@gmail.com">
+                <p class="white-text">Username</p>
+                <input type="text" class="input is-info is-rounded transparent" id="username" placeholder="johndoe123">
                 <p id="usrerr" class="red-text"></p>
             </div>
         </div>
